--- a/less/navigation.less
+++ b/less/navigation.less
@@ -5,6 +5,11 @@
     background: @wild-sand;
     .flex(column, center, center);
 
+// STRETCH
+    position: sticky;
+    top: 0;
+    background: rgba(246,246,246, 0.90);
+
     h1{
         font-size: 4rem;
         padding: 1.25% 0 0.75%;
